--- a/tema3/tema3.Rmd
+++ b/tema3/tema3.Rmd
@@ -9,8 +9,8 @@ library(rattle)
 library(rpart.plot)
 library(RColorBrewer)
 
-train <- read.csv("input_files/train.csv")
-test <- read.csv("input_files/test.csv")
+train <- read.csv("../input_files/train.csv")
+test <- read.csv("../input_files/test.csv")
 ```
 
 ## Arbori de decizie
@@ -19,5 +19,9 @@ decision_tree <- rpart(Survived ~ Pclass + Sex + Age + SibSp + Parch + Fare + Em
              data=train,
              method="class")
 fancyRpartPlot(decision_tree)
+
+decision_tree_prediction <- predict(decision_tree, newdata = test, type = "class")
+decision_tree_solution <- data.frame(PassengerId = test$PassengerId, Survived = decision_tree_prediction)
+write.csv(decision_tree_solution, file="../tema3/solutions/decision_tree_solution.csv", row.names = FALSE)
 ```
 
