Bayes naiv + KNN

--- a/tema3/tema3.Rmd
+++ b/tema3/tema3.Rmd
@@ -3,14 +3,42 @@ title: "Titanic - Analiza prin clasificare supervizata"
 output: html_notebook
 ---
 
-## Load data
+## Load and process data
 ```{r}
 library(rattle)
 library(rpart.plot)
 library(RColorBrewer)
+library(e1071)
+library(class)
 
 train <- read.csv("../input_files/train.csv")
 test <- read.csv("../input_files/test.csv")
+
+# Remove Name, Ticket and Cabin columns
+train <- train[,-c(4,9,11)]
+test <- test[,-c(3,8,10)]
+
+# Change Sex to 0 = male, 1 = female
+train$Sex <- sapply(as.character(train$Sex), switch, 'male' = 0, 'female' = 1)
+test$Sex <- sapply(as.character(test$Sex), switch, 'male' = 0, 'female' = 1)
+
+# Change Embarked column to 0 = 'C', 1 = 'Q', 2 = 'S' and remove NAs
+train$Embarked[train$Embarked == ''] <- 'S'
+train$Embarked <- sapply(as.character(train$Embarked), switch, 'C' = 0, 'Q' = 1, 'S' = 2)
+test$Embarked <- sapply(as.character(test$Embarked), switch, 'C' = 0, 'Q' = 1, 'S' = 2)
+
+# Remove NAs from Age and Fare columns
+train_age <- na.omit(train$Age)
+train_age_avg <- mean(train_age)
+train$Age[is.na(train$Age)] <- train_age_avg
+
+test_age <- na.omit(test$Age)
+test_age_avg <- mean(test_age)
+test$Age[is.na(test$Age)] <- test_age_avg
+
+test_fare <- na.omit(test$Fare)
+test_fare_avg <- mean(test_fare)
+test$Fare[is.na(test$Fare)] <- test_fare_avg
 ```
 
 ## Arbori de decizie
@@ -20,8 +48,28 @@ decision_tree <- rpart(Survived ~ Pclass + Sex + Age + SibSp + Parch + Fare + Em
              method="class")
 fancyRpartPlot(decision_tree)
 
-decision_tree_prediction <- predict(decision_tree, newdata = test, type = "class")
+decision_tree_prediction <- predict(decision_tree, newdata = test, type = "class",  control=rpart.control(minsplit=2, cp=0.005))
 decision_tree_solution <- data.frame(PassengerId = test$PassengerId, Survived = decision_tree_prediction)
 write.csv(decision_tree_solution, file="../tema3/solutions/decision_tree_solution.csv", row.names = FALSE)
 ```
 
+## Bayes naiv
+```{r}
+naive_bayes <- naiveBayes(Survived ~ Pclass + Sex + Age + SibSp + Parch + Fare + Embarked,
+                       data=train,
+                       method="class")
+str(naive_bayes)
+
+summary(naive_bayes)
+
+naive_bayes_prediction <- predict(decision_tree, newdata = test,  type = "class")
+naive_bayes_solution <- data.frame(PassengerId = test$PassengerId, Survived = naive_bayes_prediction)
+write.csv(naive_bayes_solution, file="../tema3/solutions/naive_bayes_solution.csv", row.names = FALSE)
+```
+
+## KNN
+```{r}
+knn <- knn(train[, -c(1,9)], test[, -1], train[, 1], k = 5,  l = 0, prob = FALSE, use.all = TRUE)
+knn_solution <- data.frame(PassengerId = test$PassengerId, Survived = knn)
+write.csv(knn_solution, file="../tema3/solutions/knn_solution.csv", row.names = FALSE)
+```
