--- a/tema3/tema3.Rmd
+++ b/tema3/tema3.Rmd
@@ -58,8 +58,7 @@ write.csv(decision_tree_solution, file="../tema3/solutions/decision_tree_solutio
 naive_bayes <- naiveBayes(Survived ~ Pclass + Sex + Age + SibSp + Parch + Fare + Embarked,
                        data=train,
                        method="class")
-str(naive_bayes)
-
+#str(naive_bayes)
 summary(naive_bayes)
 
 naive_bayes_prediction <- predict(decision_tree, newdata = test,  type = "class")
@@ -69,7 +68,20 @@ write.csv(naive_bayes_solution, file="../tema3/solutions/naive_bayes_solution.cs
 
 ## KNN
 ```{r}
-knn <- knn(train[, -c(1,9)], test[, -1], train[, 1], k = 5,  l = 0, prob = FALSE, use.all = TRUE)
+knn <- knn(train[,-c(1,2)], test[,-1], train$Survived, k = 5,  l = 0, prob = FALSE, use.all = TRUE)
 knn_solution <- data.frame(PassengerId = test$PassengerId, Survived = knn)
 write.csv(knn_solution, file="../tema3/solutions/knn_solution.csv", row.names = FALSE)
+```
+
+## Random forest
+```{r}
+random_forest <- randomForest(as.factor(Survived) ~ Pclass + Sex + Age + SibSp + Parch + Fare + Embarked,
+                              data=train, 
+                              importance=TRUE, 
+                              ntree=100)
+random_forest
+
+random_forest_prediction <- predict(random_forest, newdata = test,  type = "class")
+random_forest_solution <- data.frame(PassengerId = test$PassengerId, Survived = random_forest_prediction)
+write.csv(random_forest_solution, file="../tema3/solutions/random_forest_solution.csv", row.names = FALSE)
 ```
